--- a/WQU_final_project_crude.ipynb
+++ b/WQU_final_project_crude.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQUR/GVz8jedPm9qdJugqO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q4qdyxlgeFf3",
-        "outputId": "923e1417-2843-4efb-cf61-766e672a9b26"
+        "outputId": "f881ed73-5f2c-4c39-a46b-fdb54fede7cb"
       },
       "outputs": [
         {
@@ -43,28 +42,28 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting yfinance\n",
-            "  Downloading yfinance-0.1.77-py2.py3-none-any.whl (28 kB)\n",
+            "  Downloading yfinance-0.1.84-py2.py3-none-any.whl (29 kB)\n",
+            "Requirement already satisfied: lxml>=4.5.1 in /usr/local/lib/python3.7/dist-packages (from yfinance) (4.9.1)\n",
+            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.11)\n",
             "Collecting requests>=2.26\n",
             "  Downloading requests-2.28.1-py3-none-any.whl (62 kB)\n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: appdirs>=1.4.4 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.4.4)\n",
-            "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.3.5)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from yfinance) (0.0.11)\n",
+            "\u001b[K     |████████████████████████████████| 62 kB 1.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.3.5)\n",
             "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.21.6)\n",
-            "Requirement already satisfied: lxml>=4.5.1 in /usr/local/lib/python3.7/dist-packages (from yfinance) (4.9.1)\n",
+            "Requirement already satisfied: appdirs>=1.4.4 in /usr/local/lib/python3.7/dist-packages (from yfinance) (1.4.4)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->yfinance) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->yfinance) (2022.4)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->yfinance) (2022.5)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas>=0.24.0->yfinance) (1.15.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2.10)\n",
-            "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2.1.1)\n",
             "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (1.24.3)\n",
+            "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2.1.1)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.26->yfinance) (2022.9.24)\n",
             "Installing collected packages: requests, yfinance\n",
             "  Attempting uninstall: requests\n",
             "    Found existing installation: requests 2.23.0\n",
             "    Uninstalling requests-2.23.0:\n",
             "      Successfully uninstalled requests-2.23.0\n",
-            "Successfully installed requests-2.28.1 yfinance-0.1.77\n",
+            "Successfully installed requests-2.28.1 yfinance-0.1.84\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting EIA_python\n",
             "  Downloading eia_python-1.22-py3-none-any.whl (3.8 kB)\n",
@@ -159,7 +158,7 @@
           "height": 566
         },
         "id": "aQlFo4Ds_Qr5",
-        "outputId": "8dcb79d8-6f67-4916-9270-ab3a31909da7"
+        "outputId": "598973d0-1ca0-4ce3-9415-0b6e671b7c2a"
       },
       "execution_count": null,
       "outputs": [
@@ -167,7 +166,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7efc8ecfcc10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa3d73da790>"
             ]
           },
           "metadata": {},
@@ -243,7 +242,7 @@
           "height": 566
         },
         "id": "a9yNY8OtfROX",
-        "outputId": "ff27622b-0cd5-4adb-d9fa-edafa4b12969"
+        "outputId": "81c8e225-902e-4929-a563-9a342d3df914"
       },
       "execution_count": null,
       "outputs": [
@@ -251,7 +250,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7efcb6d13b50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa3d76e82d0>"
             ]
           },
           "metadata": {},
@@ -280,10 +279,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 363
         },
         "id": "0YS5Yxr4fjMB",
-        "outputId": "a9e9494a-87a8-4d89-bcc0-a6e0d34d97b5"
+        "outputId": "037b069b-24cf-4bd2-ca05-7bc7c26fdaea"
       },
       "execution_count": null,
       "outputs": [
@@ -317,7 +316,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ece606f5-f2bb-4d06-8cb0-94130583daab\">\n",
+              "  <div id=\"df-f2990212-1efd-447f-bb5f-eefbd5a2d825\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -395,7 +394,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ece606f5-f2bb-4d06-8cb0-94130583daab')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2990212-1efd-447f-bb5f-eefbd5a2d825')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -446,12 +445,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ece606f5-f2bb-4d06-8cb0-94130583daab button.colab-df-convert');\n",
+              "          document.querySelector('#df-f2990212-1efd-447f-bb5f-eefbd5a2d825 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ece606f5-f2bb-4d06-8cb0-94130583daab');\n",
+              "          const element = document.querySelector('#df-f2990212-1efd-447f-bb5f-eefbd5a2d825');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -500,10 +499,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 111
+          "height": 112
         },
         "id": "qnzjlo_ti5oH",
-        "outputId": "95757ca4-5dd7-4bd0-f534-47a30c4aaf7e"
+        "outputId": "c1dc8f12-3a89-411a-abe0-50fa38639e7d"
       },
       "execution_count": null,
       "outputs": [
@@ -521,7 +520,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-99ef23ba-2949-465b-bbdd-49112dbc1c61\">\n",
+              "  <div id=\"df-bf06fb85-a8d1-4428-827d-c5dfa358b623\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -565,7 +564,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99ef23ba-2949-465b-bbdd-49112dbc1c61')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf06fb85-a8d1-4428-827d-c5dfa358b623')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -616,12 +615,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-99ef23ba-2949-465b-bbdd-49112dbc1c61 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bf06fb85-a8d1-4428-827d-c5dfa358b623 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-99ef23ba-2949-465b-bbdd-49112dbc1c61');\n",
+              "          const element = document.querySelector('#df-bf06fb85-a8d1-4428-827d-c5dfa358b623');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -692,7 +691,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZsOc8DP0jPmT",
-        "outputId": "f4b5b73c-7914-497b-97c0-695fcf3700a7"
+        "outputId": "9d555ee2-e8e8-4c91-e154-1b6f4c992bee"
       },
       "execution_count": null,
       "outputs": [
@@ -723,7 +722,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NPxcaA9EwaM",
-        "outputId": "bfa9852b-a5fc-4872-fecb-003ea2ee8532"
+        "outputId": "99161604-ec88-4119-dc40-456da6f67df8"
       },
       "execution_count": null,
       "outputs": [
@@ -825,7 +824,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9-YE_nxmTC_l",
-        "outputId": "7e0cf396-3a75-4d21-e318-765a19b3f408"
+        "outputId": "a5a3c67f-1f30-4ea0-ad2c-ad4bfde10eba"
       },
       "execution_count": null,
       "outputs": [
@@ -866,7 +865,7 @@
           "height": 896
         },
         "id": "KqwdV15hUrkj",
-        "outputId": "efc647bc-adaa-489b-97ed-9659e7160841"
+        "outputId": "2a3b218c-a878-4eef-db3f-2d0e639588be"
       },
       "execution_count": null,
       "outputs": [
@@ -878,7 +877,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -933,7 +932,7 @@
           "height": 390
         },
         "id": "Q09awlsUVKWi",
-        "outputId": "3658c7a1-df73-4fdb-abd2-4eb2d8cacf64"
+        "outputId": "3b403c9b-5968-49ab-e157-3981bb6f7687"
       },
       "execution_count": null,
       "outputs": [
@@ -964,7 +963,7 @@
           "height": 390
         },
         "id": "RK38_FfPWcXZ",
-        "outputId": "cf43e4ed-a761-4ce9-f7c4-73dc4a4acb0f"
+        "outputId": "b844ad2b-8cb2-4b73-c274-8395bad506bc"
       },
       "execution_count": null,
       "outputs": [
@@ -995,7 +994,7 @@
           "height": 390
         },
         "id": "QzuUboG2WivN",
-        "outputId": "b2f7519b-21eb-4d9d-d185-75a5783778ed"
+        "outputId": "274fc130-1efb-43b1-80ab-e378c0dbd7a5"
       },
       "execution_count": null,
       "outputs": [
@@ -1023,7 +1022,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uldb3FB_WjwB",
-        "outputId": "621a25ec-7589-47c2-9d1a-d29b79ced4cb"
+        "outputId": "ef67a006-537a-4dcb-eb76-9838b74a455b"
       },
       "execution_count": null,
       "outputs": [
@@ -1031,7 +1030,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total explained variance:93.76646284511483\n"
+            "Total explained variance:93.7664628451149\n"
           ]
         }
       ]
@@ -1057,7 +1056,7 @@
           "height": 441
         },
         "id": "8uuLr3X9WmOk",
-        "outputId": "b6811e17-b134-4f97-d235-48e8a237ca22"
+        "outputId": "98ac6b1d-bb61-4f6d-f72d-6c2da9a372ee"
       },
       "execution_count": null,
       "outputs": [
@@ -1086,12 +1085,114 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "all_price_series.columns"
+      ],
       "metadata": {
-        "id": "nBa_GrbKXhjF"
+        "id": "nBa_GrbKXhjF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c931180-e8e0-4d48-af7e-b3f78ecb0590"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Los Angeles Reformulated RBOB Regular Gasoline Spot Price, Daily (Dollars per Gallon)',\n",
+              "       'Mont Belvieu, TX Propane Spot Price FOB, Daily (Dollars per Gallon)',\n",
+              "       'New York Harbor No. 2 Heating Oil Future Contract 1, Daily (Dollars per Gallon)',\n",
+              "       'Cushing, OK WTI Spot Price FOB, Daily (Dollars per Barrel)',\n",
+              "       'Europe Brent Spot Price FOB, Daily (Dollars per Barrel)'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pcamodel.components_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rsU9ZyNuMdpd",
+        "outputId": "400efa63-6b3a-412a-bfc4-abb4512ae499"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.11239298, -0.11473041, -0.11857717, -0.96080491, -0.19234897],\n",
+              "       [ 0.91620582,  0.18496474,  0.16895833, -0.1984969 ,  0.2416754 ],\n",
+              "       [-0.37791535,  0.61590133,  0.32779346, -0.18581391,  0.57954308]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pcamodel.explained_variance_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1KcKRZtGMe0S",
+        "outputId": "cb6835fd-10d8-4867-f77d-bb392959e935"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.0088751 , 0.00278283, 0.00125183])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pcamodel"
+      ],
+      "metadata": {
+        "id": "HJX1Lqi9M5dR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94d4ab80-bd91-4c9d-de88-b1ceb4a1cd0c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PCA(n_components=3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     }
   ]
 }
